Section 6 138 (함수 내에서 함수 생성하기)

--- a/Section6_Functions/RestOperatorJS.ipynb
+++ b/Section6_Functions/RestOperatorJS.ipynb
@@ -17,8 +17,22 @@
     "\n",
     "const sumUp3 = (a,b,...numbers) => {}\n",
     "```\n",
-    "`sumUp2`의 `a`파라미터는 유효하지 않다 -> Rest Operator가 다 잡아먹기 때문에\n",
-    "`sumUp3` 함수는 `sum`을 계산할 때 앞에 두 개의 파라미터는 제외될 것이다."
+    "`sumUp2`의 `a`파라미터는 유효하지 않다 -> Rest Operator가 다 잡아먹기 때문에   \n",
+    "`sumUp3` 함수는 `sum`을 계산할 때 앞에 두 개의 파라미터는 제외될 것이다.\n",
+    "***\n",
+    "### ES6 이전 방식\n",
+    "- `arguments`사용\n",
+    "    - javascript의 예약어\n",
+    "- 지금은 Rest 연산자 사용!\n",
+    "```javascript\n",
+    "const subtractUp = function() {\n",
+    "    let sum = 0;\n",
+    "    for (const num of arguments) { // don't use that\n",
+    "        sum -= num;\n",
+    "    }\n",
+    "    return sum;\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -50,30 +64,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ES6 이전 방식\n",
-    "- `arguments`는 예약어\n",
-    "- 지금은 Rest 연산자 사용!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "const subtractUp = function() {\n",
-    "    let sum = 0;\n",
-    "    for (const num of arguments) { // don't use that\n",
-    "        sum -= num;\n",
-    "    }\n",
-    "    return sum;\n",
-    "}"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -91,6 +81,53 @@
    ],
    "source": [
     "sumUp(1, 5, 10, -3, 6, 10, 25, 88);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Function in Other Function - Section 6 138 \n",
+    "***\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const sumUp = (...numbers) => {\n",
+    "    const validateNumber = (number) => {\n",
+    "        return isNaN(number) ? 0 : number;\n",
+    "    };\n",
+    "    let sum = 0;\n",
+    "    for (const num of numbers) {\n",
+    "        sum += validateNumber(num);\n",
+    "    }\n",
+    "    return sum;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "132"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sumUp(1, 5, 'j',0, -3, 6, 10, 25, 88);"
    ]
   }
  ],
