- Section 6 139 (콜백 함수 이해하기)

--- a/Section6_Functions/RestOperatorJS.ipynb
+++ b/Section6_Functions/RestOperatorJS.ipynb
@@ -87,9 +87,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Function in Other Function - Section 6 138 \n",
-    "***\n",
-    "\n"
+    "## 함수 내에서 함수 생성하기 - Section 6 138 \n",
+    "***"
    ]
   },
   {
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,13 +120,61 @@
        "132"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sumUp(1, 5, 'j',0, -3, 6, 10, 25, 88);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 콜백 함수 이해하기 - Section 6 139\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const sumUp = (resultHandler, ...numbers) => {\n",
+    "    const validateNumber = (number) => {\n",
+    "        return isNaN(number) ? 0 : number;\n",
+    "    };\n",
+    "    let sum = 0;\n",
+    "    for (const num of numbers) {\n",
+    "        sum += validateNumber(num);\n",
+    "    }\n",
+    "    resultHandler(sum);\n",
+    "};\n",
+    "\n",
+    "const showResult = (result) => {\n",
+    "    //alert('The result after adding all numbers is: ' + result);\n",
+    "    console.log('The result after adding all numbers is: ' + result);\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result after adding all numbers is: 132\n"
+     ]
+    }
+   ],
+   "source": [
+    "sumUp(showResult, 1, 5, 'j',0, -3, 6, 10, 25, 88);"
    ]
   }
  ],
