--- a/Section6_Functions/RestOperatorJS.ipynb
+++ b/Section6_Functions/RestOperatorJS.ipynb
@@ -176,6 +176,75 @@
    "source": [
     "sumUp(showResult, 1, 5, 'j',0, -3, 6, 10, 25, 88);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `bind()`로 작업하기 - Section 6 140\n",
+    "***\n",
+    "- `bind()`는 즉시 실행되지 않는 함수를 생성할 수 있고\n",
+    "- 대신 나중에 실행될 준비. -> 콜백함수를 위한 메서드\n",
+    "- `bind()`\n",
+    "    - 1st Parameter: `this`\n",
+    "    - 2nd Parameter~: 쉼표로 구분해주고 사전 구성하고 싶은 매개변수를 넣는다(원하는 만큼) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// const subtractUp = function(resultHandler, ...numbers) {\n",
+    "//     let sum = 0;\n",
+    "//     for (const num of numbers) { // don't use that\n",
+    "//         sum -= num;\n",
+    "//     }\n",
+    "//     resultHandler(sum);\n",
+    "// }\n",
+    "\n",
+    "const combine = (resultHandler, operation, ...numbers) => {\n",
+    "    const validateNumber = (number) => {\n",
+    "        return isNaN(number) ? 0 : number;\n",
+    "    };\n",
+    "    let sum = 0;\n",
+    "    for (const num of numbers) {\n",
+    "        if (operation === 'ADD')\n",
+    "            sum += validateNumber(num);\n",
+    "        else\n",
+    "            sum -= validateNumber(num);\n",
+    "    }\n",
+    "    resultHandler(sum);\n",
+    "};\n",
+    "\n",
+    "const showResult = (messageText, result) => {\n",
+    "    //alert('The result after adding all numbers is: ' + result);\n",
+    "    //alert(messageText + ' ' + result);\n",
+    "    //console.log('The result after adding all numbers is: ' + result);\n",
+    "    console.log(messageText + ' ' + result);\n",
+    "};\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result after adding all numbers is:  132\n",
+      "The result after subtracting all numbers is:  -132\n"
+     ]
+    }
+   ],
+   "source": [
+    "combine(showResult.bind(this, 'The result after adding all numbers is: '),'ADD',1, 5, 'j',0, -3, 6, 10, 25, 88 )\n",
+    "combine(showResult.bind(this, 'The result after subtracting all numbers is: '),'SUBTRACT',1, 5, 'j',0, -3, 6, 10, 25, 88 )"
+   ]
   }
  ],
  "metadata": {
