Section 10 262 객체 설명자 이해하기 코드 추가

--- a/Section10_OOP/instanceof_and_descriptor.ipynb
+++ b/Section10_OOP/instanceof_and_descriptor.ipynb
@@ -109,12 +109,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Section 10 262 (객체 설명자 이해하기)\n"
+    "### Section 10 262 (객체 설명자 이해하기)\n",
+    "\n",
+    "- `getOwnPropertyDescriptors(obj)`: obj의 메타데이터로 구성된 새로운 객체 리턴"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,11 +130,134 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ name: 'Max', greet: [Function: greet] }"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "person"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{\n",
+       "  name: {\n",
+       "    value: 'Max',\n",
+       "    writable: true,\n",
+       "    enumerable: true,\n",
+       "    configurable: true\n",
+       "  },\n",
+       "  greet: {\n",
+       "    value: [Function: greet],\n",
+       "    writable: true,\n",
+       "    enumerable: true,\n",
+       "    configurable: true\n",
+       "  }\n",
+       "}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Object.getOwnPropertyDescriptors(person)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ name: 'Max', greet: [Function: greet] }"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Object.defineProperty(person, 'name', {\n",
+    "    configurable: true,\n",
+    "    enumerable: true,\n",
+    "    value: person.name,\n",
+    "    writable: false\n",
+    "});"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Maximilian'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "person.name = 'Maximilian';"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ name: 'Max', greet: [Function: greet] }"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "person"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Object.getOwnPropertyDescriptors()"
+    "Object.defineProperty(person, 'name', {\n",
+    "    configurable: true,\n",
+    "    enumerable: true,\n",
+    "    value: person.name,\n",
+    "    writable: false\n",
+    "});"
    ]
   }
  ],
